@@ -18,25 +18,24 @@ repositories {
     maven { url = 'https://oss.sonatype.org/content/groups/public/'}
     maven { url = 'https://maven.enginehub.org/repo/' }
     maven { url = 'https://jitpack.io' }
-    maven { url = ("https://mvn.intellectualsites.com/content/repositories/releases/") }
+    maven { url = "https://mvn.intellectualsites.com/content/repositories/releases/" }
 }
 
 dependencies {
-    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    implementation 'org.jetbrains:annotations:19.0.0'
+    testCompileOnly group: 'junit', name: 'junit', version: '4.12'
 
-    implementation 'com.github.lucko:LuckPerms:5.3'
-    implementation 'com.github.NEZNAMY:TAB-API:2.8.10'
+    compileOnly 'com.github.lucko:LuckPerms:5.3'
+    compileOnly 'com.github.NEZNAMY:TAB:2.9.0'
+    compileOnly 'com.sk89q.worldguard:worldguard-bukkit:7.0.5-SNAPSHOT' //The only plugin I'm waiting for to update
 
-    implementation files("C:/Users/ander/Desktop/ThePitOfTrash/Paper/Paper-Server/target/paper-1.16.5.jar")
-    implementation 'com.sk89q.worldguard:worldguard-bukkit:7.0.5-SNAPSHOT'
-    implementation files('C:/Users/ander/Desktop/ThePitOfTrash/RoyalGrenadier/build/libs/RoyalGrenadier-1.0.5-SNAPSHOT.jar')
+    compileOnly 'com.fastasyncworldedit:FAWE-Bukkit:1.17-15'
+    compileOnly 'com.fastasyncworldedit:FAWE-Core:1.17-15'
 
-    implementation 'com.intellectualsites.fawe:FAWE-Bukkit:1.16-583'
+    compileOnly files('D:/GitHubRepos/Paper/Paper-Server/build/libs/Paper-Server-1.17-R0.1-SNAPSHOT-mojang-mapped.jar')
+    compileOnly files('D:/GitHubRepos/RoyalGrenadier/build/libs/RoyalGrenadier-1.1.0-SNAPSHOT-mojang-mapped.jar')
+    compileOnly files('D:/GitHubRepos/FTC/FTC-Parent/Squire/build/libs/Squire-1.1.0-SNAPSHOT-all.jar')
 }
-
-/*tasks.withType(JavaCompile).each{
-    it.options.compilerArgs.add("--enable-preview")
-}*/
 
 processResources {
     File pluginYml = new File('build/resources/main/plugin.yml')
